test/interp/precision-1.psc
Algoritmo NumeroMuyLargo
    definir x como Real
    // ok
    x <- 12345678901234567
    x <- 1.2345678901234567
    x <- 12345678.901234567
    x <- 12345678901234.567
    x <- +12345678901234567
    x <- -12345678901234567
    // error
    x <- 1234567890123456
    x <- 1.234567890123456
    x <- 12345678.90123456
    x <- 12345678901234.56
    x <- +1234567890123456
    x <- -1234567890123456    
FinAlgoritmo
